# GDKVM

./: .gitignore  404.html  CLAUDE.md  CONTEXT.md  README.md  README_dev.md  astro.config.mjs  gdkvm_wrapper.py  index.html  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements.txt  sitemap-0.xml  sitemap-index.xml  tool.html  train.py  train.sh  train.zsh  tsconfig.json
.claude/: launch.json
.github/workflows/: deploy.yml  main.yml  multi-site-checks.yml
.omc/sessions/: 0fd3df28-9fdd-4f6b-bb19-a29b5329b813.json  bf4f77d0-0522-44da-8a2d-c28d331c09e9.json
.omc/state/: agent-replay-1928a421-5058-4362-96d8-95b90a4881b7.jsonl  hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
01_env/: env_gdkvm_20250702_rtx1.yml  env_gdkvm_20250702_rtx6.yml  environment_rtx1_20250702.yml  【from history】environment_rtx6_20250702.yml
_astro/: ClientRouter.astro_astro_type_script_index_0_lang.DQAK6ZHT.js  Section.DzCR5MI-.css  ec.3ha4n.css  index.B0NqHVf_.js  page.BOdB6yKo.js  tool.DAJCWn_J.css
assets/css/: index.css
assets/js/: index.js
components/arch/home/: abstract.html  methodology.html
components/arch/reprod/: data.html  environment.html  training.html
config/: config_gdkvm_01.yaml  gdkvm_0709_2010.yaml
config/model/: base.yaml
dataset/: __init__.py  echo.py  utils.py  vos_10_dataset.py  vos_dataset.py  vos_dataset_0709_2010.py
docs/: reproduction_en.md  reproduction_zh.md
e2e/: smoke.spec.ts
en/: index.html
en/reprod/: index.html
en/tool/: index.html
env/: readme.md  uv_pip_list.md  uv_tree.md
env/env_01/: uv_pip_list.md  uv_pip_list_grep_nvidia.md  uv_tree.md
env/env_02/: pyproject.toml  uv_pip_list.md  uv_pip_list_grep_nvidia.md  uv_tree.md
gdkvm/: __init__.py
metr/: dice.py
model/: aux_modules.py  channel_attn.py  gdkvm01.py  gdkvm_warpper.py  group_modules.py  kpff.py  losses.py  readme.md  trainer.py
model/transformer/: object_summarizer.py  object_transformer.py  positional_encoding.py  transformer_layers.py
model/utils/: conv.py  resnet.py  resnet_silu.py
paper/fig/Met/: Gated_Delta_Rule.tex  KPFF.tex
public/: manifest.json  robots.txt  sw.js
public/assets/css/: toolstyle.css
public/assets/js/: tool.js
public/model/: gdkvm_warpper_full.py  kpff.py
reprod/: index.html  readme.md
scripts/: inline-critical-css.mjs  smart-autopush.sh
src/: content.config.ts
src/components/: ActionButton.astro  CopyButton.astro  Footer.astro  HomePage.astro  LangSwitcher.astro  Section.astro  ThemeToggle.astro
src/content/404/: en.json
src/content/footer/: en.json  zh.json
src/content/reprod/: en.json  zh.json
src/content/tool/: en.json
src/i18n/: en.json  index.ts  zh.json
src/layouts/: BaseLayout.astro  Layout.astro
src/pages/: 404.astro  index.astro  tool.astro
src/pages/[lang]/: index.astro  tool.astro
src/pages/reprod/: index.astro
src/scripts/: tool.ts
src/styles/: global.css  home.css  reprod.css  toolstyle.css
utils/: ddp.py  general_utils.py  get_default_model.py  hausdorff.py  image_saver.py  log_integrator.py  logger.py  logger_utils.py  tensor_utils.py
vis/: readme.md  vis0708_1720.py  vis0709_1020.py  vis_0730.py
website/: DESIGN.md  astro.config.mjs  manifest.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
website/.github/workflows/: deploy.yml
website/e2e/: smoke.spec.ts
website/public/: 404.html  sw.js
website/scripts/: strip-woff-fallback.mjs
website/src/: content.config.ts
website/src/components/: ActionButton.astro  CopyButton.astro  Footer.astro  HomePage.astro  LangSwitcher.astro  Section.astro  ThemeToggle.astro
website/src/config/: site.ts
website/src/i18n/: index.ts
website/src/integrations/: inline-critical-css.mjs  strip-woff-fallback.mjs
website/src/layouts/: BaseLayout.astro  Layout.astro
website/src/pages/: 404.astro  index.astro  reprod.astro
website/src/scripts/: dom-handlers.ts  katex.ts  (+4 more)
zh/: index.html
zh/reprod/: index.html
zh/tool/: index.html
(+24 files in other folders)
