[project]
name = "gdkvm-20251018"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hausdorff>=0.2.6",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.7",
    "medpy>=0.5.2",
    "numba>=0.62.1",
    "opencv-python>=4.12.0.88",
    "pydantic<2.12",
    "tensorboard>=2.20.0",
    "torch==2.4.1",
    "torchvision==0.19.1",
    "tqdm>=4.67.1",
    "wandb>=0.22.2",
]

# 仅将 torch/torchvision 路由到 CUDA 12.4 的 PyTorch 索引；
# 其他依赖仍然使用默认 PyPI，避免 MarkupSafe 等被错误解析。
[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }
]

# 默认索引：PyPI
[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

# 额外索引：PyTorch CUDA 12.4（仅显式使用，或被上面的 sources 定向时使用）
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

