[project]
name = "gdkvm_20251215"
version = "1.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = [
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.7",
    "monai>=1.5.1",
    "numba>=0.63.1",
    "numpy>=1.26,<3.0",
    "opencv-python>=4.12.0.88",
    "pydantic<2.12",
    "scikit-image>=0.26.0",
    "scipy>=1.16.3",
    "tensorboard>=2.20.0",
    "torch==2.9.0",
    "torchvision==0.24.0",
    "tqdm>=4.67.1",
    "wandb>=0.23.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
